Fix broken styles

--- a/www/styles.css
+++ b/www/styles.css
@@ -172,7 +172,6 @@ tr.scores:hover {
 }
 
 .noUi-handle-upper:hover,
-{
 .noUi-handle-lower:hover {
     background-color: var(--highlight-light) !important;
 }
